@@ -4,6 +4,7 @@
 #define SETTINGS_H
 
 #include "definitions/definitions.h"
+#include "gui/messagesview.h"
 #include "gui/notifications/toastnotificationsmanager.h"
 #include "miscellaneous/settingsproperties.h"
 #include "miscellaneous/textfactory.h"
@@ -153,6 +154,12 @@ namespace Messages {
 
   KEY AvoidOldArticles;
   VALUE(bool) AvoidOldArticlesDef;
+
+  KEY ArticleMarkOnSelection;
+  VALUE(int) ArticleMarkOnSelectionDef;
+
+  KEY ArticleMarkOnSelectionDelay;
+  VALUE(int) ArticleMarkOnSelectionDelayDef;
 
   KEY DateTimeToAvoidArticle;
   VALUE(QDateTime) DateTimeToAvoidArticleDef;
